--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.datasource.url=jdbc:mysql://localspring.datasource.url=jdbc:mysql://localhost:3306/host:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/jdbctemplate
+spring.datasource.username=root
+spring.datasource.password =fuck
