--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/jdbctemplate
-spring.datasource.username=root
-spring.datasource.password =fuck
+spring.datasource.url = jdbc:mysql://localhost:3306/enterprise
+spring.datasource.username = root
+spring.datasource.password = fuck
+
+spring.datasource.continue-on-error = true
+
+spring.datasource.initialization-mode = never
+
+spring.liquibase.enabled = false
+
