--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,7 +1,7 @@
-databaseChangeLog:
-  - include:
-      file: migrations/001-schema.sql
-      relativeToChangelogFile: yes
-  - include:
-      file: migrations/002-sample.xml
-      relativeToChangelogFile: yes
+#databaseChangeLog:
+#  - include:
+#      file: migrations/001-schema.sql
+#      relativeToChangelogFile: yes
+#  - include:
+#      file: migrations/002-sample.xml
+#      relativeToChangelogFile: yes
