--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.datasource.password = fuck
 
 spring.datasource.continue-on-error = true
 
-spring.datasource.initialization-mode = never
+spring.datasource.initialization-mode = always
 
 spring.liquibase.enabled = false
 
+spring.jpa.hibernate.ddl-auto = none
