--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/enterprise
 spring.datasource.username = root
-spring.datasource.password = fuck
+spring.datasource.password = saQ@L7!y
 
 spring.datasource.continue-on-error = true
 
