--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/enterprise
 spring.datasource.username = root
-spring.datasource.password = saQ@L7!y
+spring.datasource.password = fuck
 
 spring.datasource.continue-on-error = true
 
-spring.datasource.initialization-mode = always
+spring.datasource.initialization-mode = never
 
-spring.liquibase.enabled = false
+spring.liquibase.enabled = true
 
 spring.jpa.hibernate.ddl-auto = none
