--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/enterprise
 spring.datasource.username = root
 spring.datasource.password = fuck
-
 spring.datasource.continue-on-error = true
-
-spring.datasource.initialization-mode = never
+#spring.datasource.initialization-mode = never
 
 spring.liquibase.enabled = true
 
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.show-sql=true
